--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
     </head>
     <body>
     <header>
-	<h1>Page title</h1>
+	<h1>site</h1>
     </header>
     <nav id="pageNav">
     </nav>
     <main>
+	<h2>page title</h2>
     </main>
     <footer>
+	 copyright
     </footer>
         <script>
 //use the modernizr load to load up external scripts. This will load the scripts asynchronously, but the order listed matters. Although it will load all scripts in parallel, it will execute them in the order listed
-Modernizr.load([
+Modernizr.load([ 
 {
     load: [  
 		//for local testing, for distribution remove the protocol and let Google resolve
